--- a/Final/Cliente/public/cart.html
+++ b/Final/Cliente/public/cart.html
@@ -26,7 +26,7 @@
             </div>
             <div class="col-2 d-flex justify-content-end align-items-right">
                 <div class="generate">
-                    <button id="generate" class="btn btn-primary" onclick="generate()">Generar Factura</button>
+                    <button id="generate" class="btn btn-primary" onclick="generarFactura()">Generar Factura</button>
                 </div>
             </div>
             <div class="col-2 d-flex justify-content-end align-items-right">
