--- a/Final/Cliente/public/index.html
+++ b/Final/Cliente/public/index.html
@@ -22,7 +22,7 @@
      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
      crossorigin="anonymous"/>
 
-            <link rel="stylesheet" href="style.css">   
+            <link rel="stylesheet" href="/public/style.css">   
 </head>
 
 <body>
@@ -63,7 +63,7 @@
         </div>
 
     </div>
-    <script src="index.js"></script>
+    <script src="/public/index.js"></script>
 
 
 </body>
